--- a/server/package.json
+++ b/server/package.json
@@ -11,8 +11,11 @@
     "express-rate-limit": "^7.4.0",
     "helmet": "^7.1.0",
     "jsonwebtoken": "^9.0.2",
+    "mime-types": "^3.0.1",
     "multer": "^2.0.2",
+    "pdf-lib": "^1.17.1",
     "pg": "^8.16.3",
+    "puppeteer": "^24.22.3",
     "xlsx": "^0.18.5"
   },
   "devDependencies": {
