--- a/server/package.json
+++ b/server/package.json
@@ -4,17 +4,20 @@
   "version": "1.0.0",
   "type": "commonjs",
   "dependencies": {
+    "archiver": "^7.0.1",
     "bcrypt": "^5.1.1",
     "cors": "^2.8.5",
-    "dotenv": "^16.4.5",
-    "express": "^4.19.2",
+    "dotenv": "^16.6.1",
+    "express": "^4.21.2",
     "express-rate-limit": "^7.4.0",
+    "fs-extra": "^11.3.2",
     "helmet": "^7.1.0",
     "jsonwebtoken": "^9.0.2",
     "mime-types": "^3.0.1",
     "multer": "^2.0.2",
     "pdf-lib": "^1.17.1",
     "pg": "^8.16.3",
+    "pg-connection-string": "^2.9.1",
     "puppeteer": "^24.22.3",
     "xlsx": "^0.18.5"
   },
