--- a/server/package.json
+++ b/server/package.json
@@ -8,6 +8,7 @@
     "bcrypt": "^5.1.1",
     "cors": "^2.8.5",
     "dotenv": "^16.6.1",
+    "exceljs": "^4.4.0",
     "express": "^4.21.2",
     "express-rate-limit": "^7.4.0",
     "fs-extra": "^11.3.2",
