--- a/server/package.json
+++ b/server/package.json
@@ -20,6 +20,7 @@
     "pg": "^8.16.3",
     "pg-connection-string": "^2.9.1",
     "puppeteer": "^24.22.3",
+    "unzipper": "^0.12.3",
     "xlsx": "^0.18.5"
   },
   "devDependencies": {
