--- a/server/package.json
+++ b/server/package.json
@@ -13,7 +13,9 @@
     "express-rate-limit": "^7.4.0",
     "fs-extra": "^11.3.2",
     "helmet": "^7.1.0",
+    "html2canvas": "^1.4.1",
     "jsonwebtoken": "^9.0.2",
+    "jspdf": "^3.0.3",
     "mime-types": "^3.0.1",
     "multer": "^2.0.2",
     "pdf-lib": "^1.17.1",
