--- a/server/package.json
+++ b/server/package.json
@@ -19,6 +19,7 @@
     "mime-types": "^3.0.1",
     "multer": "^2.0.2",
     "pdf-lib": "^1.17.1",
+    "pdfkit": "^0.17.2",
     "pg": "^8.16.3",
     "pg-connection-string": "^2.9.1",
     "puppeteer": "^24.22.3",
