--- a/server/.env.example
+++ b/server/.env.example
@@ -1,7 +1,7 @@
 ADMIN_USER=spnpoldajateng
 # pilih salah satu:
-ADMIN_PASS_PLAIN=spnpoldajateng
-# ADMIN_PASS_HASH=$2b$10$/CrCEi1HRXAXI5Njml72NO.NjZYRFq.Hl3/I.lazyLeEXO/nrif7S
+# ADMIN_PASS_PLAIN=spnpoldajateng
+ADMIN_PASS_HASH=$2b$10$/CrCEi1HRXAXI5Njml72NO.NjZYRFq.Hl3/I.lazyLeEXO/nrif7S
 JWT_SECRET=fx72sOuQ84xBzndmixMU9hiIkWuVaf7474oYseR2l2E
 PORT=4000
 DATABASE_URL=postgres://sa_user:testsa@localhost:5432/sistem_akademik
