--- a/server/.env.example
+++ b/server/.env.example
@@ -1,8 +1,8 @@
 ADMIN_USER=spnpoldajateng
 # pilih salah satu:
 # ADMIN_PASS_PLAIN=spnpoldajateng
-ADMIN_PASS_HASH=$2b$10$/CrCEi1HRXAXI5Njml72NO.NjZYRFq.Hl3/I.lazyLeEXO/nrif7S
+ADMIN_PASS_HASH=$2b$12$86OHu1DxQ1lT7A1zPeZw9OV2QsFSdmNajsSLbpOOQSLg0m2sHKmqa
 JWT_SECRET=fx72sOuQ84xBzndmixMU9hiIkWuVaf7474oYseR2l2E
 PORT=4000
-DATABASE_URL=postgres://sa_user:testsa@localhost:5432/sistem_akademik
+DATABASE_URL=postgres://sa_user:spn2025@172.0.0.1:5432/sistem_akademik
 UPLOAD_DIR=./uploads
